--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,12 @@ body, html {
 canvas {
   cursor: crosshair;
   position: absolute;
+  background: white;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  opacity: 0;
+  opacity: 0.3;
   transition: opacity 0.5s ease, transform 0.5s ease;
   transform: scale(1.01);
 
