remove john's files and cleanup index

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html(lang='en-us')
     meta(charset='utf-8')
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no')
-    meta(name='description', content='~/tech ~/product ~/management')
+    meta(name='description', content='~/AI ~/datascience ~/machinelearning')
     link(rel='shortcut icon', type='image/png', href='../assets/favicon.ico')
     title Stojan Jovanovic
     style.
@@ -15,7 +15,9 @@ html(lang='en-us')
     section
       .row.column
         .title Stojan Jovanovic, Ph.D.
-        div ~/AI-systems-arch ~/machine-learning ~/data-science
+        div ~/AI Systems Architecture/~
+        div ~/Machine Learning/~
+        div ~/Data Science/~
 
       .row stojan.jovanovic2112@gmail.com
 
@@ -29,7 +31,7 @@ html(lang='en-us')
         a.i(href='https://math.stackexchange.com/users/61080/stojan-jovanovi%c4%87')
           svg(viewBox='0 0 32 32')
             path(d='M32 20v12H0V20h4v8h24v-8zM6 22h20v4H6zm.473-4.329l.866-3.905 19.526 4.328-.866 3.905zm2.266-8.029l1.69-3.625 18.126 8.452-1.69 3.625zm22.252 1.654l-2.435 3.173L12.689 2.294 14.45 0h1.82z')
-        a.i(href='https://visualcv.com/john-granstrom')
+        #a.i(href='https://visualcv.com/john-granstrom')
           svg(viewBox='-1 0 32 32')
             path(d='M27 0H3C1.35 0 0 1.35 0 3v26c0 1.65 1.35 3 3 3h24c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-1 28H4V4h22v24zM8 18h14v2H8zm0 4h14v2H8zm2-13a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm5 3h-4c-1.65 0-3 .9-3 2v2h10v-2c0-1.1-1.35-2-3-2z')
         a.i(href='https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=stojan+jovanovic&btnG=')
@@ -37,10 +39,6 @@ html(lang='en-us')
             path(d='M0 32C4 20 14.469 0 32 0c-8.219 6.594-12 22-18 22H8L2 32H0z')
 
     footer
-      a(href='https://github.com/jgranstrom/johngranstrom') Psst, I am open-source
+      a(href='https://github.com/stojan211287/stojanjovanovic') This page is open-source
 
-    a.i#seed
-      svg(viewBox='0 0 32 32')
-        path(d='M8 6L4 2H2v2l4 4zm2-6h2v4h-2zm8 10h4v2h-4zm2-6V2h-2l-4 4 2 2zM0 10h4v2H0zm10 8h2v4h-2zm-8 0v2h2l4-4-2-2zm29.563 9.563L11.684 7.684a1.505 1.505 0 0 0-2.121 0L7.684 9.563a1.505 1.505 0 0 0 0 2.121l19.879 19.879a1.505 1.505 0 0 0 2.121 0l1.879-1.879a1.505 1.505 0 0 0 0-2.121zM15 17l-6-6 2-2 6 6-2 2z')
-
-    script(src="./stojan.ts")
+    script(src="./index.ts")
