spell name properly and change font

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html(lang='en-us')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no')
     meta(name='description', content='~/AI ~/datascience ~/machinelearning')
     link(rel='shortcut icon', type='image/png', href='../assets/favicon.ico')
-    title Stojan Jovanovic
+    title Stojan Jovanovi&#x107;
     style.
       a,section{color:#fff}
   body
@@ -14,10 +14,10 @@ html(lang='en-us')
 
     section
       .row.column
-        .title Stojan Jovanovic, Ph.D.
-        div ~/AI Systems Architecture/~
-        div ~/Machine Learning/~
-        div ~/Data Science/~
+        .title Dr. Stojan Jovanovi&#x107;
+        div ~/ AI Systems Architecture /~
+        div ~/ Machine Learning /~
+        div ~/ Data Science /~
 
       .row stojan.jovanovic2112@gmail.com
 
@@ -31,14 +31,14 @@ html(lang='en-us')
         a.i(href='https://math.stackexchange.com/users/61080/stojan-jovanovi%c4%87')
           svg(viewBox='0 0 32 32')
             path(d='M32 20v12H0V20h4v8h24v-8zM6 22h20v4H6zm.473-4.329l.866-3.905 19.526 4.328-.866 3.905zm2.266-8.029l1.69-3.625 18.126 8.452-1.69 3.625zm22.252 1.654l-2.435 3.173L12.689 2.294 14.45 0h1.82z')
-        #a.i(href='https://visualcv.com/john-granstrom')
+        a.i(href='https://drive.google.com/file/d/1SLHFKzTI1w6Lp0uyTY4Zo8CnRUw4Q329/view')
           svg(viewBox='-1 0 32 32')
             path(d='M27 0H3C1.35 0 0 1.35 0 3v26c0 1.65 1.35 3 3 3h24c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-1 28H4V4h22v24zM8 18h14v2H8zm0 4h14v2H8zm2-13a3 3 0 1 1 6 0 3 3 0 0 1-6 0zm5 3h-4c-1.65 0-3 .9-3 2v2h10v-2c0-1.1-1.35-2-3-2z')
-        a.i(href='https://scholar.google.com/scholar?hl=en&as_sdt=0%2C5&q=stojan+jovanovic&btnG=')
+        a.i(href='https://scholar.google.com/citations?user=bFMMLdIAAAAJ&hl=en')
           svg(viewBox='0 0 32 32')
             path(d='M0 32C4 20 14.469 0 32 0c-8.219 6.594-12 22-18 22H8L2 32H0z')
 
     footer
-      a(href='https://github.com/stojan211287/stojanjovanovic') This page is open-source
+      a(href='https://github.com/stojan211287/stojanjovanovic') Page source code
 
     script(src="./index.ts")
