--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 body, html {
   background: black;
-  font-family: "Trebuchet MS", Helvetica, sans-serif;
-  font-size: 22px;
+  font-family: "Courier New", Helvetica, sans-serif;
+  font-size: 20px;
   margin: 0;
   width: 100%;
   height: 100%;
