--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,8 @@ html(lang='en-us')
 
     section
       .row.column
-        .title Dr. Stojan Jovanovi&#x107;
+        .title Stojan Jovanovi&#x107;,
+        .title Ph.D.
         div ~/ AI Systems Architecture /~
         div ~/ Machine Learning /~
         div ~/ Data Science /~
