--- a/src/styles.scss
+++ b/src/styles.scss
@@ -87,7 +87,12 @@ footer { left: 50%; transform: translateX(-50%); font-size: 0.8em; margin-bottom
 }
 
 .title {
-  font-size: 1.5em;
+  font-size: 1.8em;
+  margin-bottom: 0.5rem;
+}
+
+.subtitle {
+  font-size: 1.2em;
   margin-bottom: 0.5rem;
 }
 
