break up name in two lines

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,7 +14,8 @@ html(lang='en-us')
 
     section
       .row.column
-        .title Stojan Jovanovi&#x107;,
+        .title Stojan 
+        .title Jovanovi&#x107;,
         .subtitle Ph.D.
         div ~/ AI Systems Architecture /~
         div ~/ Machine Learning /~
