--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,7 @@ html(lang='en-us')
     section
       .row.column
         .title Stojan 
-        .title Jovanovi&#x107;,
+        .title Jovanovi&#x107;
         .subtitle Ph.D.
         div ~/ AI Systems Architecture /~
         div ~/ Machine Learning /~
