add analytics engineering

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,8 +18,8 @@ html(lang='en-us')
         .title Jovanovi&#x107;
         .subtitle Ph.D.
         div ~/ AI Systems Architecture /~
-        div ~/ Machine Learning /~
         div ~/ Data Science /~
+        div ~/ Analytics Engineering /~
 
       .row stojan.jovanovic2112@gmail.com
 
