update business card

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,7 +18,7 @@ html(lang='en-us')
         .title Jovanovi&#x107;
         .subtitle Ph.D.
         div ~/ AI Systems Architecture /~
-        div ~/ Data Science /~
+        div ~/ Machine Learning Engineering /~
         div ~/ Analytics Engineering /~
 
       .row stojan.jovanovic2112@gmail.com
