--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html(lang='en-us')
     meta(charset='utf-8')
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no')
-    meta(name='description', content='~/AI ~/datascience ~/machinelearning')
+    meta(name='description', content='AI data science machine learning analytics engineering')
     link(rel='shortcut icon', type='image/png', href='../assets/favicon.ico')
     title Stojan Jovanovi&#x107;
     style.
@@ -17,11 +17,12 @@ html(lang='en-us')
         .title Stojan 
         .title Jovanovi&#x107;
         .subtitle Ph.D.
+        .subtitle UK Tech Nation Exceptional Talent
         div ~/ AI Systems Architecture /~
         div ~/ Machine Learning Engineering /~
         div ~/ Analytics Engineering /~
 
-      .row stojan.jovanovic2112@gmail.com
+      .row stojan.jovanovic@pm.me
 
       .row
         a.i(href='https://linkedin.com/in/stojanjovanovic211287')
