reorder business card

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,9 +14,7 @@ html(lang='en-us')
 
     section
       .row.column
-        .title Stojan 
-        .title Jovanovi&#x107;
-        .subtitle Ph.D.
+        .title Stojan Jovanovi&#x107;, Ph.D.
         .subtitle UK Tech Nation Exceptional Talent
         div ~/ AI Systems Architecture /~
         div ~/ Machine Learning Engineering /~
