change card style

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,11 +16,11 @@ html(lang='en-us')
       .row.column
         .title Stojan Jovanovi&#x107;, Ph.D.
         .subtitle UK Tech Nation Exceptional Talent
-        div ~/ AI Systems Architecture /~
         div ~/ Machine Learning Engineering /~
         div ~/ Analytics Engineering /~
+        div ~/ AI Systems Architecture /~
 
-      .row stojan.jovanovic@pm.me
+      .row stojanjo@pm.me
 
       .row
         a.i(href='https://linkedin.com/in/stojanjovanovic211287')
