redo front page

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,10 +16,10 @@ html(lang='en-us')
       .row.column
         .title Stojan Jovanovi&#x107;, Ph.D.
         .subtitle UK Tech Nation Exceptional Talent
-        div ~/ Machine Learning Engineering /~
-        div ~/ AI Systems Architecture /~
+        div ~/ Data Science /~
         div ~/ Analytics Engineering /~
-
+        div ~/ ML Engineering /~
+        
       .row stojanjo@pm.me
 
       .row
