rejig front page again

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,9 +16,9 @@ html(lang='en-us')
       .row.column
         .title Stojan Jovanovi&#x107;, Ph.D.
         .subtitle UK Tech Nation Exceptional Talent
-        div ~/ Data Science /~
+        div ~/ Machine Learning Engineering /~
         div ~/ Analytics Engineering /~
-        div ~/ ML Engineering /~
+        div ~/ Data Science /~
         
       .row stojanjo@pm.me
 
